--- a/Lab5/theory.tex
+++ b/Lab5/theory.tex
@@ -2,28 +2,21 @@
 
 \subsection{Theory}
 
-Electric current can be measured in two ways: directly or indirectly. To make a direct measurement, the meter must be connected to the circuit in series. An ideal meter should have a zero internal resistance as not to impact the current flowing through; in reality, meters will always have a non-zero resistance creating a voltage drop.
+Resistance can be measured using two methods: direct or indirect. To take a direct measurement, the measured component must be connected to the ohmmeter as shown in Fig.~\ref{fig:direct_schematic}. The component cannot be connected to a circuit, and must be passive and linear. The final result is obtained by calculating the limiting error and applying it to the measured value.
 
-The systematic error of current measurements $\Delta_m I$ can be calculated using formulas shown in Eq.~\ref{eq:DeltamI},~\ref{eq:deltamI} (for: $I_A$ -- measured current, $R_A$ -- internal ammeter resistance, $R_C$ -- circuit resistance). 
-
-\begin{equation}
-	\Delta_m I = -I_A \cdot\frac{R_A}{R_C}	
-	\label{eq:DeltamI}
-\end{equation}
-
-\begin{equation}
-	\delta_m I = -\frac{R_A}{R_A + R_C}
-	\label{eq:deltamI}
-\end{equation}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=6cm]{schematics/direct.pdf}
+	\caption{Direct resistance measurement schematic}
+	\label{fig:direct_schematic}
+\end{figure}
 
 \subsection{Equipment}
 
 The following devices were used during the laboratory:
 
 \begin{itemize}
-	\item power supply: DF1730SB3A;
-	\item analog ammeter: LM-3;
-	\item digital meter: Agilent 34401A;
-	\item decade resistor: DR4b-16;
-	\item resistance standard: product name unknown.
+	\item digital meter: UT803;
+	\item linear resistor;
+	\item diode resistor.
 \end{itemize}
